--- a/app/src/main/res/layout/activity_sevitor.xml
+++ b/app/src/main/res/layout/activity_sevitor.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ActivityServitor">
 
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="102dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
