--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -6,25 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".BookingActivity">
 
-    <EditText
-        android:id="@+id/editTextTime"
-        android:layout_width="89dp"
-        android:layout_height="71dp"
-        android:ems="10"
-        android:inputType="time"
-        tools:layout_editor_absoluteX="263dp"
-        tools:layout_editor_absoluteY="114dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="348dp"
-        android:layout_height="87dp"
-        tools:layout_editor_absoluteX="62dp"
-        tools:layout_editor_absoluteY="266dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="hint" />
-    </com.google.android.material.textfield.TextInputLayout>
-
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="193dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginBottom="519dp"
+        android:text="TEMP BOKNINGAR"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="TEMP Bokningar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
