--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".TablesActivity">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="194dp"
+        android:layout_marginEnd="169dp"
+        android:layout_marginBottom="518dp"
+        android:text="TEMP ALEX"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="TEMP ALEX" />
 </androidx.constraintlayout.widget.ConstraintLayout>
