--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -6,18 +6,115 @@
     android:layout_height="match_parent"
     tools:context=".TablesActivity">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="194dp"
-        android:layout_marginEnd="169dp"
-        android:layout_marginBottom="518dp"
-        android:text="TEMP ALEX"
+    <View
+        android:id="@+id/rectangle_at_the_top2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="166dp"
+        android:background="@color/appBlue"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Layout for tables -->
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="409dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="173dp"
+        android:background="@color/purple_200"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="TEMP ALEX" />
+        app:layout_constraintTop_toBottomOf="@+id/rectangle_at_the_top2">
+
+        <Button
+            android:id="@+id/button_table1"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/purple_700"
+            android:onClick="onClick"
+            android:text="@string/table_1" />
+
+        <Button
+            android:id="@+id/button_table2"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/purple_700"
+            android:onClick="onClick"
+            android:text="@string/table_2" />
+
+        <Button
+            android:id="@+id/button_table3"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/purple_700"
+            android:onClick="onClick"
+            android:text="@string/table_3" />
+
+        <Button
+            android:id="@+id/button_table4"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/purple_700"
+            android:onClick="onClick"
+            android:text="@string/table_4" />
+
+        <Button
+            android:id="@+id/button_table5"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/purple_700"
+            android:onClick="onClick"
+            android:text="@string/table_5" />
+
+        <Button
+            android:id="@+id/button_table6"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/purple_700"
+            android:onClick="onClick"
+            android:text="@string/table_6" />
+
+        <Button
+            android:id="@+id/button_table7"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@color/purple_700"
+            android:onClick="onClick"
+            android:text="@string/table_7" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textViewTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="177dp"
+        android:layout_marginEnd="177dp"
+        android:layout_marginBottom="20dp"
+        android:text="Chosen table"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
