--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DA00</color>
     <color name="teal_700">#FF03DA00</color>
-    <color name="appBlue">#38C3FF00</color>
+    <color name="appBlue">#2094D0</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#FF3700B3</color>
