--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DA00</color>
-    <color name="teal_700">#FF03DA00</color>
-    <color name="appBlue">#2094D0</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="blue">#FF3700B3</color>
+    <color name="appBlue">#2094D0</color>
+    <color name="appOrange">#F8A236</color>
+    <color name="foodYellow">#FF3700B3</color>
+    <color name="foodBlue">#5CE0E5</color>
+    <color name="foodPurple">#FE66C3</color>
+    <color name="foodGreen">#7ED857</color>
 </resources>
