--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="white">#EAEBEF</color>
     <color name="appBlue">#2094D0</color>
     <color name="appOrange">#F8A236</color>
     <color name="foodYellow">#FF3700B3</color>
