--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -5,92 +5,115 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TablesActivity">
-
-    <!-- Layout for tables -->
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="409dp"
-        android:layout_height="500dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="173dp"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topbarLayout">
+        app:layout_constraintGuide_begin="30dp" />
 
-        <Button
-            android:id="@+id/button_table1"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/appBlue"
-            android:onClick="onClick"
-            android:text="@string/table_1" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="374dp" />
 
-        <Button
-            android:id="@+id/button_table2"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/appBlue"
-            android:onClick="onClick"
-            android:text="@string/table_2" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="55dp" />
 
-        <Button
-            android:id="@+id/button_table3"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/appBlue"
-            android:onClick="onClick"
-            android:text="@string/table_3" />
+    <Button
+        android:id="@+id/button_table1"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/appBlue"
+        android:onClick="onClick"
+        android:text="@string/table_1"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toTopOf="@+id/guideline_top" />
 
-        <Button
-            android:id="@+id/button_table4"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/appBlue"
-            android:onClick="onClick"
-            android:text="@string/table_4" />
+    <Button
+        android:id="@+id/button_table2"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/appBlue"
+        android:onClick="onClick"
+        android:text="@string/table_2"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/button_table1" />
 
-        <Button
-            android:id="@+id/button_table5"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/appBlue"
-            android:onClick="onClick"
-            android:text="@string/table_5" />
+    <Button
+        android:id="@+id/button_table3"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/appBlue"
+        android:onClick="onClick"
+        android:text="@string/table_3"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/button_table2"/>
+    <Button
+        android:id="@+id/button_table4"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/appBlue"
+        android:onClick="onClick"
+        android:text="@string/table_4"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/button_table3" />
 
-        <Button
-            android:id="@+id/button_table6"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/appBlue"
-            android:onClick="onClick"
-            android:text="@string/table_6" />
+    <Button
+        android:id="@+id/button_table5"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/appBlue"
+        android:onClick="onClick"
+        android:text="@string/table_5"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/button_table4" />
+    <Button
+        android:id="@+id/button_table6"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/appBlue"
+        android:onClick="onClick"
+        android:text="@string/table_6"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/button_table5" />
 
-        <Button
-            android:id="@+id/button_table7"
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:background="@color/appBlue"
-            android:onClick="onClick"
-            android:text="@string/table_7" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/button_table7"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:background="@color/appBlue"
+        android:onClick="onClick"
+        android:text="@string/table_7"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left"
+        app:layout_constraintTop_toBottomOf="@+id/button_table6" />
 
     <TextView
         android:id="@+id/textViewTemp"
@@ -108,11 +131,9 @@
         android:id="@+id/topbarLayout"
         android:layout_width="409dp"
         android:layout_height="56dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
         android:background="@color/appBlue"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -121,9 +142,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginBottom="4dp"
             android:text="Back"
+            android:textColor="@color/black"
+            app:backgroundTint="@color/appOrange"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
