--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_left2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="30dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_right2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="374dp" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/topbarLayout"
         android:layout_width="409dp"
         android:layout_height="56dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:background="@color/appBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/view_title"
@@ -25,6 +38,8 @@
         android:scaleX="5"
         android:scaleY="5"
         android:text="@string/main_title"
+        android:textColor="@color/black"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,46 +48,52 @@
 
     <Button
         android:id="@+id/button_servitor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="159dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="342dp"
         android:text="@string/button_servitor"
         android:textColor="@color/black"
         app:backgroundTint="@color/appOrange"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topbarLayout" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline_right2"
+        app:layout_constraintStart_toStartOf="@+id/guideline_left2"
+        app:layout_constraintTop_toBottomOf="@+id/view_title" />
 
     <Button
         android:id="@+id/button_kok"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="149dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/button_kok"
         android:textColor="@color/black"
         app:backgroundTint="@color/appOrange"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_tempAlex"
+        app:layout_constraintEnd_toEndOf="@+id/button_servitor"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/button_servitor"
         app:layout_constraintTop_toBottomOf="@+id/button_servitor" />
 
     <Button
         android:id="@+id/button_tempAlex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="162dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
         android:text="ALEX"
         android:textColor="@color/black"
         app:backgroundTint="@color/appOrange"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
+        app:layout_constraintEnd_toEndOf="@+id/button_kok"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/button_kok"
         app:layout_constraintTop_toBottomOf="@+id/button_kok" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="511dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
