--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" >
 
         <Button
-            android:id="@+id/button_back_2"
+            android:id="@+id/button_back_log_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/back"
