--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,4 +96,18 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="511dp" />
 
+    <Button
+        android:id="@+id/button_tempOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="157dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="169dp"
+        android:text="temp order"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_tempAlex" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
