Changed the backround of the inputarea in booking

--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -58,6 +58,9 @@
         android:hint="@string/name"
         android:inputType="text"
         android:minHeight="48dp"
+        android:background="@drawable/edit_text_background"
+        android:paddingStart="@dimen/padding_edit_text"
+        android:paddingEnd="@dimen/padding_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +76,9 @@
         android:hint="@string/amount"
         android:inputType="number"
         android:minHeight="48dp"
+        android:background="@drawable/edit_text_background"
+        android:paddingStart="@dimen/padding_edit_text"
+        android:paddingEnd="@dimen/padding_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +94,9 @@
         android:hint="@string/time"
         android:inputType="time"
         android:minHeight="48dp"
+        android:background="@drawable/edit_text_background"
+        android:paddingStart="@dimen/padding_edit_text"
+        android:paddingEnd="@dimen/padding_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,6 +112,9 @@
         android:hint="@string/notes"
         android:inputType="text"
         android:minHeight="48dp"
+        android:background="@drawable/edit_text_background"
+        android:paddingStart="@dimen/padding_edit_text"
+        android:paddingEnd="@dimen/padding_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toStartOf="parent"
